--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-toast": "^1.2.13",
+    "@react-oauth/google": "^0.12.2",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "googleapis": "^148.0.0",
     "lucide-react": "^0.508.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
