--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
+    "resend": "^4.5.1",
     "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0",
     "zod": "^3.24.4"
