--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@radix-ui/react-toast": "^1.2.13",
     "@react-oauth/google": "^0.12.2",
     "@shadcn/ui": "^0.0.4",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "googleapis": "^148.0.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.508.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
