--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@shadcn/ui": "^0.0.4",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.9.0",
+    "bun": "^1.2.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
